# tranzcribe

./: .gitignore  README.md  main.py  pyproject.toml
demo_files/: Captions Almost Done_iTT_English.itt  details.md  instructions.toml  output.changes.txt  output.itt
docs/: architecture.md
src/transcribe_enhance/: __init__.py
src/transcribe_enhance/application/: pipeline.py  use_cases.py
src/transcribe_enhance/delivery/: cli.py
src/transcribe_enhance/domain/: command_glossary.py  models.py  rules.py
src/transcribe_enhance/infrastructure/: ai_gemini.py  ai_openai.py  itt_parser.py  itt_writer.py  toml_config.py
tests/: test_ai_effectiveness.py  test_command_glossary.py  test_itt_roundtrip.py
tests/fixtures/: sample.itt
